Lesson5/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - protocol: TCP
          containerPort: 3000
          name: redmine
