Lesson5/ingress_redmine.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: redmine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redmine
                port:
                  number: 3000
